--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -85,8 +85,11 @@
         text-align: center !important;
         font-size:16px;
       }
-      .wrraper_dashboard{
+      .wrraper_dashboard {
         padding: 30px 30px 52px 30px;
+        .row {
+          width: 100% !important;
+        }
       }
     }
 
@@ -141,8 +144,21 @@
         .account-detail-right {
           width: 50%;
           padding-left: 15px;
+          display: flex;
+          justify-content: center;
+
           .card-body {
             height: 100%;
+          }
+          .payment-card {
+            padding: 15px;
+            width: 97% !important;
+            background-color: #F7F7F7;
+            border-radius: 4px;
+
+            img {
+              width: 60px;
+            }
           }
         }
         img {
@@ -165,7 +181,7 @@
           .card-text {
             padding: 0 1.5rem;
             margin-bottom: 1rem;
-            text-align: left;
+            text-align: right;
 
             label {
               margin: 0;
@@ -186,6 +202,7 @@
             .add-payment-method {
               border: 2px solid $gray-light;
               height: 100%;
+              margin-left: 10px;
 
               .add {
                 width: 30px;
@@ -904,10 +921,31 @@ span.edit_my_gear {
       }
     }
   }
-
 }
 
-@media (max-width:1050px){
+@media (max-width: 1050px){
+  .dashboard .dashboard-head .nav-tabs .nav-link {
+    padding: 10px 15px !important;
+  }
+  .row {
+    width: 100%;
+  }
+  .wrraper_dashboard {
+    background-color: white !important;
+  }
+  .account-detail-left {
+    width: 100% !important;
+    padding: 0 !important;
+    margin-bottom: 24px;
+  }
+  .account-detail-right {
+    width: 100% !important;
+    padding: 0 !important;
+  }
+  .card-body {
+    border: solid 20px #faf8f9 !important;
+  }
+
   .dashboard-head{
     img{
       width: 141px !important;
@@ -1028,17 +1066,7 @@ span.edit_my_gear {
 
 }
 
-@media (max-width:550px){
-  //.dashboard .dashboard-head .user-detail img{
-  //  width: 100px;
-  //  height: 100px;
-  //}
-  //.dashboard .dashboard-head .user-detail .user-avatar{
-  //  margin-right: 10px;
-  //}
-  //.dashboard .dashboard-head .user-detail .user-name{
-  //  margin-bottom: 1rem;
-  //}
+@media (max-width:550px) {
   .dashboard{
     .dashboard-head{
       .user-detail{
@@ -1072,8 +1100,6 @@ span.edit_my_gear {
       }
     }
   }
-
-
 
   .dashboard-body{
     .listing-body{
@@ -1119,13 +1145,10 @@ span.edit_my_gear {
               }
             }
           }
-
         }
       }
     }
-
   }
-
 }
 .react-tabs__tab-panel--selected {
   padding:30px;
@@ -1163,8 +1186,8 @@ span.edit_my_gear {
     height: 30px;
     border-radius: 50%;
   }
-
-}.order_history_client_namegroup {
+}
+.order_history_client_namegroup {
    padding-top:12px;
    .order_history_client_first_name {
      font-size: 12px;
@@ -1182,7 +1205,6 @@ span.edit_my_gear {
    p {
      margin:0;
    }
-
  }
  .order_history_payment {
    padding:18px;
@@ -1320,9 +1342,14 @@ span.edit_my_gear {
      padding:15px;
      background-color: white;
    }
+}
+@media (min-width: 1099px) {
+  .container {
+    min-width: 1000px !important;
+  }
+}
 
- }
-@media (max-width:550px) {
+@media (max-width: 550px) {
   .styles_closeButton__20ID4 {
     top: -36px;
     right: 0 !important;
