--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -118,6 +118,12 @@
         text-align: center;
         display: flex;
 
+        .row {
+          width: 100%;
+        }
+        .chg-pwd-heading-mobile {
+          display: none;
+        }
         button {
           width: 100%;
           margin: 0 !important;
@@ -152,7 +158,7 @@
           }
           .payment-card {
             padding: 15px;
-            width: 97% !important;
+            width: 99% !important;
             background-color: #F7F7F7;
             border-radius: 4px;
 
@@ -1346,6 +1352,42 @@ span.edit_my_gear {
 @media (min-width: 1099px) {
   .container {
     min-width: 1000px !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .wrraper_dashboard {
+    padding: 0 !important;
+
+    .account-detail-left {
+      margin-bottom: 0 !important;
+
+      .card-body {
+        border: solid 10px #faf8f9 !important;
+        margin: 0 !important;
+        border-bottom: none !important;
+
+        .chg-pwd-heading-mobile {
+          display: flex;
+          justify-content: stretch;
+        }
+      }
+    }
+    .account-detail-right {
+      .card-body {
+        border: solid 10px #faf8f9 !important;
+        margin: 0 !important;
+      }
+    }
+
+    .payment-card {
+      width: 100% !important;
+      margin-bottom: 20px;
+    }
+    .add-payment-method {
+      min-height: 150px !important;
+      margin: 0 !important;
+    }
   }
 }
 
