--- a/src/scss/pages/cart.scss
+++ b/src/scss/pages/cart.scss
@@ -104,6 +104,10 @@
     }
   }
 }
+.breadcrumb-item.active {
+  color: #000;
+}
+
 @media(max-width: 1050px) {
   .cart_view {
     .cart-header{
@@ -226,12 +230,14 @@
     display: flex;
     width: 100%;
   }
-
-
+  .cart-item-row-lg {
+    display: none;
+  }
+  .sm-category-list-bottom {
+    padding: 0 !important;
+  }
 }
-.breadcrumb-item.active {
-  color: #000;
-}
+
 @media (min-width: 1200px) {
   .d-lg-table {
     display: contents !important;
@@ -260,10 +266,14 @@
       }
       .sm-category-list-bottom {
         display: block !important;
+        padding: 0 !important;
         .sm-bottom-second-row {
           display: flex;
 
         }
+      }
+      .sm-table-cart:last-child {
+        border-bottom: none;
       }
     }
     .flex-row {
@@ -278,5 +288,12 @@
         margin-left:5px !important;
       }
     }
+  }
+  .cart-item-row-lg {
+    display: none;
+  }
+  .continue-shpping-mobile-btn {
+    padding: 6px !important;
+    min-width: 100px !important;
   }
 }
