--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -672,7 +672,7 @@
     background: #fff;
     width: 100%;
     left: 0;
-    z-index: 100000;
+    z-index: 1000;
     &.active{
       bottom: 0
     }
@@ -682,6 +682,7 @@
     justify-content: space-between;
     position: relative;
     padding: 10px;
+    align-items: center;
 
     .search{
       position: absolute;
