--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -49,13 +49,6 @@
 
   .theme-form-field > div {
     width: 100%;
-    .MuiInput-underline-27:before {
-      border-bottom: 1px solid #E9E9E9;
-    }
-    input, label {
-      margin-left: 15px;
-      font-size: 14px;
-    }
   }
 }
 
@@ -144,11 +137,12 @@ a.forgot-pwd-link {
 }
 
 
-@media(max-width: 769px) {
+@media(max-width: 1077px) {
   .login {
     padding-top: 0;
     padding-left: 0;
-    margin-left: 5px
+    margin: 0 auto;
+    flex: none;
   }
 }
 
@@ -161,11 +155,24 @@ a.forgot-pwd-link {
     margin: 0;
   }
 
+  .login.register {
+    padding: 20px !important;
+  }
+
   .forgot-password {
     .login-or-divider {
       display: block !important;
       text-align: center;
       margin: 20px;
+    }
+    .theme-form-field {
+      width: 100% !important;
+      input {
+        text-align: center;
+      }
+      label {
+        margin-left: 44% !important;
+      }
     }
 
     .theme-btn-submit {
@@ -176,6 +183,7 @@ a.forgot-pwd-link {
   .login {
     margin: 0;
     padding: 20px;
+    width: 100%;
 
     .header {
       font-size: 27px !important;
