--- a/src/scss/pages/favourites.scss
+++ b/src/scss/pages/favourites.scss
@@ -40,6 +40,10 @@
   color: #3A3A3A;
 }
 
+.favo_table_root {
+  display: none;
+}
+
 @media(max-width: 1050px) {
   .cart-table-div {
     .favor-theme-table {
@@ -121,6 +125,7 @@
     }
   }
 }
+
 @media(max-width: 750px) {
   .favo_table_root {
     display: block;
