--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -135,15 +135,19 @@
   }
 }
 
-@media(max-width: 500px) {
+.verification-code {
+  padding-top: 15px;
+}
+
+@media(max-width: 1077px) {
   .login.success-message {
     .subheader {
-        width: 100%;
-        text-align: center;
-        margin: 30px 0;
-        br {
-          display: block;
-        }
+      width: 100%;
+      text-align: center;
+      margin: 30px 0;
+      br {
+        display: block;
+      }
     }
 
     .navigation-buttons {
@@ -168,13 +172,10 @@
 
   .login.register {
     margin-left: 0;
-    padding: 30px;
+    padding: 30px 50px;
     display: block;
     text-align: center;
 
-    .input-mobile-heading {
-
-    }
     .already-signin-wrapper {
       position: unset !important;
       display: flex;
@@ -194,6 +195,8 @@
 
       .input-mobile-heading {
         font-size: 13px;
+        display: block;
+        color: #aaa;
       }
       input {
         text-align: center;
@@ -241,8 +244,25 @@
       bottom: 12px;
     }
   }
+
+  .custom-beautiful-textfield {
+    label, input {
+      margin-left: 0 !important;
+    }
+  }
+
+  .header {
+    margin: 35px;
+  }
+  .auth-sidemenu {
+    display: flex;
+  }
 }
 
-.verification-code {
-  padding-top: 15px;
+@media(max-width: 969px) {
+  .auth-container {
+    .auth-sidemenu {
+      display: none;
+    }
+  }
 }
