--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -1164,6 +1164,96 @@ span.edit_my_gear {
       }
     }
   }
+
+  .centered-content {
+    max-width: 470px;
+    padding: 0 !important;
+  }
+  .gear-edit-modal {
+    max-width: 530px !important;
+    height: auto !important;
+
+    .gear-edit-modal-header {
+      text-align: center;
+      padding: 5px;
+      h2 {
+        font-size: 30px;
+      }
+    }
+    .edit_listgear_body_all {
+      flex: none;
+      display: block !important;
+      & > div {
+        flex: none;
+      }
+      .edit_listgear_body_left {
+        .ELBL_info {
+          .ELBL_info_title {
+            display: none;
+          }
+          form.add-gear-info {
+            .ELBL_info_column {
+              flex: none;
+              display: block !important;
+              color: #ccc;
+
+              .dropdown-menu {
+                margin-top: 287px !important;
+                margin-left: -266px !important;
+                width: 100%;
+              }
+              & > div:first-child {
+                button {
+                  width: 100%;
+                }
+              }
+              & > div:last-child {
+                padding-left: 0;
+                .type-tab-div {
+                  display: block;
+                }
+              }
+            }
+          }
+        }
+        .ELBL_type {
+          .info-right-container {
+            width: 100%;
+            .type-tab-div {
+              display: block !important;
+              .kit-check {
+                margin: 15px 0 !important;
+              }
+            }
+          }
+        }
+        .ELBL_address {
+          width: 100%;
+          .add-gear-address {
+            width: 100%;
+            .address-wrapper {
+              display: block !important;
+              .custom-input {
+                width: 100%;
+                margin: 20px 0;
+              }
+            }
+          }
+        }
+      }
+      .edit_listgear_body_right {
+        .ELBR_payment {
+          margin-left: 0 !important;
+        }
+      }
+    }
+    input {
+      outline: none;
+    }
+    button {
+      cursor: pointer;
+    }
+  }
 }
 .react-tabs__tab-panel--selected {
   padding:30px;
@@ -1183,10 +1273,7 @@ span.edit_my_gear {
 }
 .status-bar-container {
   padding:18px;
-  border-bottom: 1px solid #f5f5f5;
-  border-top: 1px solid #f5f5f5;
   justify-content: center;
-
 }
 .order_history_sm_gear_days {
   padding:18px;
@@ -1359,69 +1446,11 @@ span.edit_my_gear {
    }
 }
 
-@media (min-width: 1099px) {
-  .container {
-    min-width: 1000px !important;
-  }
-}
-
-@media (max-width: 767px) {
-  .wrraper_dashboard {
-    padding: 0 !important;
-    margin-top: 10px;
-
-    .account-detail-left {
-      margin-bottom: 0 !important;
-
-      .card-body {
-        border: solid 10px #faf8f9 !important;
-        margin: 0 !important;
-        border-bottom: none !important;
-
-        .chg-pwd-heading-mobile {
-          display: flex;
-          justify-content: stretch;
-        }
-      }
-    }
-    .account-detail-right {
-      .card-body {
-        border: solid 10px #faf8f9 !important;
-        margin: 0 !important;
-      }
-    }
-    .payment-card {
-      width: 100% !important;
-      margin-bottom: 20px;
-    }
-    .add-payment-method {
-      min-height: 150px !important;
-      margin: 0 !important;
-    }
-
-    .listing-data-slice {
-      border-left: 17px solid #faf8f9;
-      border-right: 17px solid #faf8f9;
-    }
-  }
-}
-
-@media (max-width: 550px) {
-  .styles_closeButton__20ID4 {
-    top: -36px;
-    right: 0 !important;
-  }
-  .styles_modal__gNwvD {
-    margin-top: 10vh;
-  }
-}
 .order_history_sm_parent_div {
   border:15px solid #faf8f9;
+  display: none;
 }
 
-.order_history_sm_parent_div {
-  border:15px solid #faf8f9;
-}
 .mylistingitem_sm_parent_div {
   border-top: 17px solid #faf8f9;
   &:last-child {
@@ -1481,5 +1510,65 @@ span.edit_my_gear {
     line-height: 25px;
     font-weight: 800;
     color: #252525;
+  }
+}
+
+@media (min-width: 1078px) {
+  .container {
+    min-width: 1000px !important;
+  }
+  .order_history_sm_parent_div {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .wrraper_dashboard {
+    padding: 0 !important;
+    margin-top: 10px;
+
+    .account-detail-left {
+      margin-bottom: 0 !important;
+
+      .card-body {
+        border: solid 10px #faf8f9 !important;
+        margin: 0 !important;
+        border-bottom: none !important;
+
+        .chg-pwd-heading-mobile {
+          display: flex;
+          justify-content: stretch;
+        }
+      }
+    }
+    .account-detail-right {
+      .card-body {
+        border: solid 10px #faf8f9 !important;
+        margin: 0 !important;
+      }
+    }
+    .payment-card {
+      width: 100% !important;
+      margin-bottom: 20px;
+    }
+    .add-payment-method {
+      min-height: 150px !important;
+      margin: 0 !important;
+    }
+
+    .listing-data-slice {
+      border-left: 17px solid #faf8f9;
+      border-right: 17px solid #faf8f9;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .styles_closeButton__20ID4 {
+    top: -36px;
+    right: 0 !important;
+  }
+  .styles_modal__gNwvD {
+    margin-top: 10vh;
   }
 }
