--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -30,7 +30,7 @@
 
 .forgot-password {
   .header {
-    font-size: 35px !important;
+    font-size: 43px;
     margin-bottom: 25px;
     font-weight: 800;
   }
@@ -63,7 +63,7 @@
   flex: 1;
 
   .header {
-    font-size: 35px !important;
+    font-size: 35px;
     margin-bottom: 25px;
     font-weight: 900;
   }
